--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="myscripts.js"></script>
 </head>
 <body>
-    
+  <h1>Rock Paper Scissors</h1>
+  <h3>BO5: To play click a button</h3>
+    <button id="paper">Paper!</button>
+    <button id="scissors">Scissors!</button>
+    <button id="rock">Rock!</button>
+    <div>
+      <p id="rR">Round result: </p>
+      <p id="cS">Computer Score: </p> 
+      <p id="pS">Player Score: </p>
+      <p id="winner"></p>
+    </div>
+    <script src="myscripts.js"></script>
 </body>
 </html>
